Add unit tests for various services and configurations
- Implement `AlumniInvitationConcurrencyTest` to verify that a single token cannot activate an account twice in parallel.
- Create `AuthServiceSecurityTest` to ensure OTP cooldown prevents additional emails and tokens during the cooldown period.
- Add `FinancialEntryServiceTest` to test parallel submissions with the same key and validate the handling of duplicate entries.
- Introduce `InfakServiceTest` to validate infak submissions and ensure proper error handling for unsupported banks and future dates.
- Develop `LaporanKasExportServiceTest` to test the export functionality for Excel and PDF reports, ensuring correct data formatting and error handling.
- Include an in-memory H2 database configuration for tests in `application.properties` to facilitate deterministic testing without external dependencies.